グループメンバー追加APIを定義する
