# backend/internal/presentation/api/server.gen.go
@@ -31,6 +31,9 @@ type ServerInterface interface {
 	// グループの更新
 	// (PUT /groups/{id})
 	GroupUpdate(ctx echo.Context, id string) error
+	// グループメンバーの追加
+	// (POST /groups/{id}/members)
+	GroupAddMember(ctx echo.Context, id string) error
 	// ヘルスチェック
 	// (GET /health)
 	HealthCheck(ctx echo.Context) error
@@ -136,6 +139,24 @@ func (w *ServerInterfaceWrapper) GroupUpdate(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.GroupUpdate(ctx, id)
+	return err
+}
+
+// GroupAddMember converts echo context to params.
+func (w *ServerInterfaceWrapper) GroupAddMember(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	ctx.Set(BearerAuthScopes, []string{})
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GroupAddMember(ctx, id)
 	return err
 }
 
@@ -271,6 +292,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/groups", wrapper.GroupCreate)
 	router.GET(baseURL+"/groups/:id", wrapper.GroupGet)
 	router.PUT(baseURL+"/groups/:id", wrapper.GroupUpdate)
+	router.POST(baseURL+"/groups/:id/members", wrapper.GroupAddMember)
 	router.GET(baseURL+"/health", wrapper.HealthCheck)
 	router.GET(baseURL+"/lendings", wrapper.LendingGetAll)
 	router.POST(baseURL+"/lendings", wrapper.LendingCreate)
