# backend/openapi.yaml
@@ -281,6 +281,57 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Group.UpdateRequest'
+  /groups/{id}/members:
+    post:
+      operationId: Group_addMember
+      summary: グループメンバーの追加
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: The request has succeeded.
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Access is unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Access is forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      tags:
+        - Groups
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Group.AddMemberRequest'
   /lendings:
     get:
       operationId: Lending_getAll
@@ -627,6 +678,13 @@ components:
         updatedAt:
           type: string
           format: date-time
+    Group.AddMemberRequest:
+      type: object
+      required:
+        - userId
+      properties:
+        userId:
+          type: string
     Health.CheckResponse:
       type: object
       required:
